Wrong padding fixed for input, select in filter bar.

--- a/bbGrid.css
+++ b/bbGrid.css
@@ -9,9 +9,9 @@
 .bbGrid-grid td{ cursor: default; line-height: 1.3em; overflow: hidden;white-space:nowrap; }
 .bbGrid-grid tr{height:1em;}
 .bbGrid-grid .bbGrid-grid-head{font-size: 12px;background-color: #F5F5F5;cursor: pointer}
-.bbGrid-grid .bbGrid-grid-head th{overflow: hidden;}
+.bbGrid-grid .bbGrid-grid-head th{overflow: hidden; white-space: normal;}
 .bbGrid-grid .bbGrid-grid-head i{ float: right}
-.bbGrid-grid .bbGrid-grid-head .bbGrid-filter-bar input,.bbGrid-grid .bbGrid-grid-head .bbGrid-filter-bar select{display: block;padding: 0; margin: 0px; font-size: 12px; width:100%; height: 22px}
+.bbGrid-grid .bbGrid-grid-head .bbGrid-filter-bar input,.bbGrid-grid .bbGrid-grid-head .bbGrid-filter-bar select{display: block;padding: 1px 6px;box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; margin: 0px; font-size: 12px; width:100%; height: 22px}
 .bbGrid-grid .bbGrid-grid-head .bbGrid-filter-bar select{height: 24px;padding:2px 2px;}
 .bbGrid-grid .bbGrid-actions-cell { padding: 2px 5px; text-align: center}
 .bbGrid-grid .bbGrid-subgrid-control { padding: 2px 5px; text-align: center}
